--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
         <!--/complete-list-->
     </section>
     <!--/container-->
-    <script src="./todoApp.js"></script>
-    <!-- <script src="./todo.js"></script> -->
-    <!-- <script src="./script.js"></script> -->
-    <!-- <script src="./custom.js"></script> -->
-    <!-- <script src="./formValue.js"></script> -->
-    <!-- <script src="./create.js"></script> -->
-    <!-- <script src="./parent.js"></script> -->
-    <!-- <script src="./main.js"></script> -->
+    <script src="./main.js"></script>
 </body>
 
 </html>
